@@ -9,7 +9,8 @@ FEATURES:
 	- Use IPV6 minimum MTU settings with TCP to reduce failures that
 	  are caused by delays in learning working PMTU when communicating
 	  through a tunnel.
-	- Bugfix #496: Support for EUI48 and EUI64 RR types.
+	- Bugfix #496: Support for EUI48 and EUI64 RR types. Experimental,
+	  turned off by default. Enable with --enable--eui-rrtypes.
 	- New config option "rrl-slip:" to set the average number of
 	  packets discarded before we send back a truncated response.
 	- New config option "rrl-ipv4-prefix-length:" and
